--- a/servlet/web/a.html
+++ b/servlet/web/a.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <form action="http://localhost:8080/servlet/hello3" method="get">
+    <form action="http://localhost:8080/servlet/context" method="post">
         <!--<input type="hidden" name="action" value="login" />
         <input type="hidden" name="username" value="root" />-->
         <input type="submit">
